--- a/index.html
+++ b/index.html
@@ -396,10 +396,10 @@
                         <td>
                             French
                         </td>
-                        <td>
+                        <td class="text-center">
                             <audio controls src="resources/meta/meta_webpage/fr_test1.wav"></audio>
                         </td>
-                        <td>
+                        <td class="text-center">
                             <audio controls src="resources/meta/phn_compareONmetawebpage/fr_test1.wav"></audio>
                         </td>
                     </tr>
@@ -408,10 +408,10 @@
                         <td>
                             French
                         </td>
-                        <td>
+                        <td class="text-center">
                             <audio controls src="resources/meta/meta_webpage/fr_test2.wav"></audio>
                         </td>
-                        <td>
+                        <td class="text-center">
                             <audio controls src="resources/meta/phn_compareONmetawebpage/fr_test2.wav"></audio>
                         </td>
                     </tr>
@@ -420,10 +420,10 @@
                         <td>
                             French
                         </td>
-                        <td>
+                        <td class="text-center">
                             <audio controls src="resources/meta/meta_webpage/fr_test3.wav"></audio>
                         </td>
-                        <td>
+                        <td class="text-center">
                             <audio controls src="resources/meta/phn_compareONmetawebpage/fr_test3.wav"></audio>
                         </td>
                     </tr>
@@ -432,10 +432,10 @@
                         <td>
                             German
                         </td>
-                        <td>
+                        <td class="text-center">
                             <audio controls src="resources/meta/meta_webpage/ge_test1.wav"></audio>
                         </td>
-                        <td>
+                        <td class="text-center">
                             <audio controls src="resources/meta/phn_compareONmetawebpage/ge_test1.wav"></audio>
                         </td>
                     </tr>
@@ -444,10 +444,10 @@
                         <td>
                             German
                         </td>
-                        <td>
+                        <td class="text-center">
                             <audio controls src="resources/meta/meta_webpage/ge_test2.wav"></audio>
                         </td>
-                        <td>
+                        <td class="text-center">
                             <audio controls src="resources/meta/phn_compareONmetawebpage/ge_test2.wav"></audio>
                         </td>
                     </tr>
@@ -456,10 +456,10 @@
                         <td>
                             German
                         </td>
-                        <td>
+                        <td class="text-center">
                             <audio controls src="resources/meta/meta_webpage/ge_test3.wav"></audio>
                         </td>
-                        <td>
+                        <td class="text-center">
                             <audio controls src="resources/meta/phn_compareONmetawebpage/ge_test3.wav"></audio>
                         </td>
                     </tr>
@@ -468,10 +468,10 @@
                         <td>
                             Spanish
                         </td>
-                        <td>
+                        <td class="text-center">
                             <audio controls src="resources/meta/meta_webpage/sp_test1.wav"></audio>
                         </td>
-                        <td>
+                        <td class="text-center">
                             <audio controls src="resources/meta/phn_compareONmetawebpage/sp_test1.wav"></audio>
                         </td>
                     </tr>
@@ -480,10 +480,10 @@
                         <td>
                             Spanish
                         </td>
-                        <td>
+                        <td class="text-center">
                             <audio controls src="resources/meta/meta_webpage/sp_test2.wav"></audio>
                         </td>
-                        <td>
+                        <td class="text-center">
                             <audio controls src="resources/meta/phn_compareONmetawebpage/sp_test2.wav"></audio>
                         </td>
                     </tr>
@@ -492,10 +492,10 @@
                         <td>
                             Spanish
                         </td>
-                        <td>
+                        <td class="text-center">
                             <audio controls src="resources/meta/meta_webpage/sp_test3.wav"></audio>
                         </td>
-                        <td>
+                        <td class="text-center">
                             <audio controls src="resources/meta/phn_compareONmetawebpage/sp_test3.wav"></audio>
                         </td>
                     </tr>
