--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
         </div> -->
 
-        <div class="row d-flex table-responsive overflow-hidden">
+        <div class="row d-flex table-responsive overflow-auto">
             <table class="table table-bordered m-3">
                 <!-- <h5 class="text-center fs-4">Comparing samples for cross-lingual speech synthesis</h5> -->
                 <!-- <caption class="text-center fs-4">Comparing samples for cross-lingual speech synthesis</caption> -->
@@ -395,7 +395,7 @@
             <h3>Comparing samples for seen speakers</h3>
         </div>
 
-        <div class="row d-flex table-responsive overflow-hidden">
+        <div class="row d-flex table-responsive overflow-auto">
             <table class="table table-bordered m-3">
                 <!-- <caption class="text-center fs-4">Comparing samples for seen speakers</caption> -->
                 <thead>
@@ -602,7 +602,7 @@
             <h3>Comparing samples for unseen speakers</h3>
         </div>
 
-        <div class="row d-flex table-responsive overflow-hidden">
+        <div class="row d-flex table-responsive overflow-auto">
             <table class="table table-bordered m-3">
                 <!-- <caption class="text-center fs-4">Comparing samples for unseen speakers</caption> -->
                 <thead>
