--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <th class="col-2 text-center">Reference Voice</th>
                         <th class="col-2 text-center">Fastspeech2</th>
                         <th class="col-2 text-center">Meta-TTS</th>
-                        <th class="col-2 text-center">ParrotTTS</th>
+                        <th class="col-2 text-center">ParrotTTS (Ours)</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -405,8 +405,8 @@
                         <th class="col-2 text-center">Ground Truth</th>
                         <th class="col-2 text-center">Fastspeech 2</th>
                         <th class="col-2 text-center">Meta-TTS</th>
-                        <th class="col-2 text-center">CTE-Model</th>
-                        <th class="col-2 text-center">PTE-Model</th>
+                        <th class="col-2 text-center">CTE-Model (Ours)</th>
+                        <th class="col-2 text-center">PTE-Model (Ours)</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -612,8 +612,8 @@
                         <th class="col-2 text-center">Ground Truth</th>
                         <th class="col-2 text-center">Fastspeech 2</th>
                         <th class="col-2 text-center">Meta-TTS</th>
-                        <th class="col-2 text-center">CTE-Model</th>
-                        <th class="col-2 text-center">PTE-Model</th>
+                        <th class="col-2 text-center">ParrotTTS-CTE-Model (Ours)</th>
+                        <th class="col-2 text-center">ParrotTTS-PTE-Model (Ours)</th>
                     </tr>
                 </thead>
                 <tbody>
