added ParrotTTS-CTE and Parrot-TTS-PTE name

--- a/index.html
+++ b/index.html
@@ -405,8 +405,8 @@
                         <th class="col-2 text-center">Ground Truth</th>
                         <th class="col-2 text-center">Fastspeech 2</th>
                         <th class="col-2 text-center">Meta-TTS</th>
-                        <th class="col-2 text-center">CTE-Model (Ours)</th>
-                        <th class="col-2 text-center">PTE-Model (Ours)</th>
+                        <th class="col-2 text-center">ParrotTTS-CTE-Model (Ours)</th>
+                        <th class="col-2 text-center">ParrotTTS-PTE-Model (Ours)</th>
                     </tr>
                 </thead>
                 <tbody>
