added vqvae results

--- a/index.html
+++ b/index.html
@@ -764,6 +764,7 @@
                         <th class="col-2 text-center">SS-FastSpeech2-SupASR (Baseline)</th>
                         <th class="col-2 text-center">SS-Tacotron2-UnsupASR (Baseline)</th>
                         <th class="col-2 text-center">SS-WavThruVec (Baseline)</th>
+                        <th class="col-2 text-center">SS-VQVAE (Baseline)</th>
                         <th class="col-2 text-center">ParrotTTS: NAR-TTE (Ours-Main)</th>
                         <th class="col-2 text-center">ParrotTTS: NAR-TTE (Ours-Half-Transcripts)</th>
                         <th class="col-2 text-center">ParrotTTS: AR-TTE (Ours)</th>
@@ -786,6 +787,9 @@
                         </td>
                         <td class="text-center">
                             <audio controls src="resources/parrottts/SS_w2v_LJ002-0002.wav"></audio>
+                        </td>
+                        <td class="text-center">
+                            <audio controls src="resources/parrottts/vqvae/LJ002-0002.wav"></audio>
                         </td>
                         <td class="text-center">
                             <audio controls src="resources/parrottts/SS_nar_LJ002-0002.wav"></audio>
@@ -815,6 +819,9 @@
                             <audio controls src="resources/parrottts/SS_w2v_LJ001-0136.wav"></audio>
                         </td>
                         <td class="text-center">
+                            <audio controls src="resources/parrottts/vqvae/LJ001-0136.wav"></audio>
+                        </td>
+                        <td class="text-center">
                             <audio controls src="resources/parrottts/SS_nar_LJ001-0136.wav"></audio>
                         </td>
                         <td class="text-center">
@@ -840,6 +847,9 @@
                         </td>
                         <td class="text-center">
                             <audio controls src="resources/parrottts/SS_w2v_LJ049-0048.wav"></audio>
+                        </td>
+                        <td class="text-center">
+                            <audio controls src="resources/parrottts/vqvae/LJ049-0048.wav"></audio>
                         </td>
                         <td class="text-center">
                             <audio controls src="resources/parrottts/SS_nar_LJ049-0048.wav"></audio>
@@ -869,6 +879,9 @@
                             <audio controls src="resources/parrottts/SS_w2v_LJ050-0022.wav"></audio>
                         </td>
                         <td class="text-center">
+                            <audio controls src="resources/parrottts/vqvae/LJ050-0022.wav"></audio>
+                        </td>
+                        <td class="text-center">
                             <audio controls src="resources/parrottts/SS_nar_LJ050-0022.wav"></audio>
                         </td>
                         <td class="text-center">
@@ -896,6 +909,9 @@
                             <audio controls src="resources/parrottts/SS_w2v_LJ050-0123.wav"></audio>
                         </td>
                         <td class="text-center">
+                            <audio controls src="resources/parrottts/vqvae/LJ050-0123.wav"></audio>
+                        </td>
+                        <td class="text-center">
                             <audio controls src="resources/parrottts/SS_nar_LJ050-0123.wav"></audio>
                         </td>
                         <td class="text-center">
@@ -921,6 +937,9 @@
                         </td>
                         <td class="text-center">
                             <audio controls src="resources/parrottts/SS_w2v_LJ050-0158.wav"></audio>
+                        </td>
+                        <td class="text-center">
+                            <audio controls src="resources/parrottts/vqvae/LJ050-0158.wav"></audio>
                         </td>
                         <td class="text-center">
                             <audio controls src="resources/parrottts/SS_nar_LJ050-0158.wav"></audio>
