added code link

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
 
         </div>
         <div class="row">
+            <h3 class="">Accepted to the Findings of the ACL: EACL 2024 </h4>
+        </div>
+
+        <div class="row">
+        <a href="https://github.com/parrot-tts/tts-code" title="Code">Code</a>
+        </div>
+
+        <div class="row">
             <h3 class="">Abstract: </h4>
         </div>
         <div class="row p-1">
@@ -35,7 +43,7 @@
         </div>
         <div class="row">
             <p class="fs-5">
-                We present ParrotTTS, a modularized text-to-speech synthesis model leveraging disentangled self-supervised speech representations. It can train a multi-speaker variant effectively using transcripts from a single speaker. ParrotTTS adapts to a new language in low resource setup and generalizes to languages not seen while training the self-supervised backbone. Moreover, without training on bilingual or parallel examples, ParrotTTS can transfer voices across languages while preserving the speaker-specific characteristics, e.g., synthesizing fluent Hindi speech using a French speaker’s voice and accent. We present extensive results in monolingual and multi-lingual scenarios. ParrotTTS outperforms state-of-the-art multi-lingual TTS models using only a fraction of paired data as latter. Speech samples from ParrotTTS can be found at https://parrot-tts.github.io/tts/
+                We present ParrotTTS, a modularized text-to-speech synthesis model leveraging disentangled self-supervised speech representations. It can train a multi-speaker variant effectively using transcripts from a single speaker. ParrotTTS adapts to a new language in low resource setup and generalizes to languages not seen while training the self-supervised backbone. Moreover, without training on bilingual or parallel examples, ParrotTTS can transfer voices across languages while preserving the speaker-specific characteristics, e.g., synthesizing fluent Hindi speech using a French speaker’s voice and accent. We present extensive results in monolingual and multi-lingual scenarios. ParrotTTS outperforms state-of-the-art multi-lingual TTS models using only a fraction of paired data as latter.
             </p>
         </div>
 
