--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="row">
-        <a href="https://github.com/parrot-tts/tts-code" title="Code">Code</a>
+        <a href="https://github.com/parrot-tts/Parrot-TTS" title="Code">Code</a>
         </div>
 
         <div class="row">
