--- a/index.html
+++ b/index.html
@@ -6,33 +6,82 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#712cf9">
-    <title>Document</title>
+    <title>ParrotTTS: Text-to-Speech Synthesis</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
     <style>
-        
-    </style>
+        body {
+            background-color: #f8f9fa;
+        }
 
+        .title-section {
+            background-color: #712cf9;
+            color: white;
+            padding: 40px 0;
+        }
+
+        .author-section {
+            margin-top: 30px;
+            margin-bottom: 30px;
+        }
+
+        .author-info p {
+            font-size: 1.1rem;
+            margin-bottom: 0;
+        }
+
+        .accepted-section {
+            margin: 40px 0;
+        }
+
+        .btn-primary {
+            font-size: 1.2rem;
+            padding: 10px 20px;
+        }
+    </style>
 </head>
 
-<body class="">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<body>
 
-    <div class="d-block p-3">
-        <div class="row p-5">
-            <h1 class="display-3 text-lg-center">
-                ParrotTTS: Text-to-speech synthesis exploiting disentangled self-supervised representations
-            </h1>
-        </div>
-        <div class="row p-2">
-
-        </div>
-        <div class="row">
-            <h3 class="">Accepted to the Findings of the ACL: EACL 2024 </h4>
+    <div class="container-fluid">
+        <!-- Title Section -->
+        <div class="row title-section text-center">
+            <div class="col">
+                <h1 class="display-4">
+                    ParrotTTS: Text-to-Speech Synthesis Exploiting Disentangled Self-Supervised Representations
+                </h1>
+            </div>
         </div>
 
-        <div class="row">
-        <a href="https://github.com/parrot-tts/Parrot-TTS" title="Code">Code</a>
+        <!-- Author Section -->
+        <div class="row justify-content-center author-section">
+            <div class="col-lg-8 text-center author-info">
+                <p class="lead">Neil Shah<sup>1,2,*</sup>, Saiteja Kosgi<sup>1,*</sup>, Vishal Tambrahalli<sup>1</sup>, Neha Sahipjohn<sup>1</sup>, Anil Nelakanti<sup>3</sup>, Vineet Gandhi<sup>1</sup></p>
+                <p><sup>1</sup>Kohli Centre on Intelligent Systems, CVIT, IIIT Hyderabad</p>
+                <p><sup>2</sup>TCS Research, Pune, India</p>
+                <p><sup>3</sup>Amazon, Bengaluru, India</p>
+            </div>
+        </div>
+
+        <!-- Spacer -->
+        <div class="row p-2"></div>
+
+        <!-- Acceptance Section -->
+        <div class="row accepted-section">
+            <div class="col text-center">
+                <h3>
+                    <a href="https://aclanthology.org/2024.findings-eacl.6.pdf" target="_blank" class="text-decoration-none">
+                        Accepted to the Findings of the ACL: EACL 2024
+                    </a>
+                </h3>
+            </div>
+        </div>
+
+        <!-- GitHub Link Section -->
+        <div class="row justify-content-center">
+            <div class="col-auto">
+                <a href="https://github.com/parrot-tts/Parrot-TTS" class="btn btn-primary" title="Link to Parrot-TTS Github repository">Link to Parrot-TTS Github repository</a>
+            </div>
         </div>
 
         <div class="row">
